--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 </head>
 <body>
     <!-- Start Header -->
-    <header id="header">
+    <header>
         <div class="container">
-            <a href="" class="logo">cholalien</a>
+            <a href="#" class="logo">cholalien</a>
             <ul class="main-nav">
-                <li><a href="#articles">articles</a></li>
-                <li><a href="#gallery">gallery</a></li>
-                <li><a href="#features">features</a></li>
+                <li><a href="#">articles</a></li>
+                <li><a href="#">gallery</a></li>
+                <li><a href="#">features</a></li>
                 <li>
                     <a href="#">other links</a>
                     <!-- Start Megamenu -->
@@ -33,38 +33,18 @@
                             <img src="./imgs/megamenu.png" alt="photo">
                         </div>
                         <ul class="links">
-                            <li>
-                                <a href="#"><i class="fas fa-bug"></i> Testimonials</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fas fa-bug"></i> Team Members</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fas fa-bug"></i> serivices</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fas fa-bug"></i> our skills</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fas fa-bug"></i> how it works</a>
-                            </li>
+                            <li><a href="#"><i class="fas fa-comments"></i> testimonials</a></li>
+                            <li><a href="#"><i class="fas fa-user-check"></i>team members</a></li>
+                            <li><a href="#"><i class="fab fa-servicestack"></i> services</a></li>
+                            <li><a href="#"><i class="far fa-check-circle"></i> our skills</a></li>
+                            <li><a href="#"><i class="fab fa-phoenix-framework"></i> how it works</a></li>
                         </ul>
                         <ul class="links">
-                            <li>
-                                <a href="#"><i class="fas fa-bug"></i> events</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fas fa-bug"></i> pricing plans</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fas fa-bug"></i> top videos</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fas fa-bug"></i> stats</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fas fa-bug"></i> request a discont</a>
-                            </li>
+                            <li><a href="#"><i class="far fa-calendar"></i> events</a></li>
+                            <li><a href="#"><i class="fas fa-tags"></i> pricing plans</a></li>
+                            <li><a href="#"><i class="fas fa-video"></i> top vides</a></li>
+                            <li><a href="#"><i class="fas fa-signal"></i> stats</a></li>
+                            <li><a href="#"><i class="fas fa-percent"></i> request a discount</a></li>
                         </ul>
                     </div>
                     <!-- End Megamenu -->
@@ -77,17 +57,96 @@
     <div class="landing">
         <div class="container">
             <div class="text">
-                <h1>Welcome, To My Website</h1>
+                <h1>Welcome, To my Website</h1>
                 <p>Here Iam gonna share everything about my life. Books Iam reading, Games Iam Playing, Stories and Events</p>
             </div>
             <div class="image">
                 <img src="./imgs/landing-image.png" alt="photo">
             </div>
-            <a href="#" class="go-down">
-                <i class="fas fa-angle-double-down fa-2x"></i>
-            </a>
+            <a href="#articles" class="go-down"><i class="fas fa-angle-double-down"></i></a>
         </div>
     </div>
     <!-- End Landing -->
+    <!-- Start Ariticles -->
+    <div class="articles" id="articles">
+        <div class="container">
+            <h2 class="special-title">Articles</h2>
+            <div class="content">
+                <div class="box">
+                    <img src="./imgs/cat-01.jpg" alt="">
+                    <h4>Test Title</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                    <div class="link">
+                        <a href="#">Read More</a>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./imgs/cat-02.jpg" alt="">
+                    <h4>Test Title</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                    <div class="link">
+                        <a href="#">Read More</a>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./imgs/cat-03.jpg" alt="">
+                    <h4>Test Title</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                    <div class="link">
+                        <a href="#">Read More</a>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./imgs/cat-04.jpg" alt="">
+                    <h4>Test Title</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                    <div class="link">
+                        <a href="#">Read More</a>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./imgs/cat-05.jpg" alt="">
+                    <h4>Test Title</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                    <div class="link">
+                        <a href="#">Read More</a>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./imgs/cat-06.jpg" alt="">
+                    <h4>Test Title</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                    <div class="link">
+                        <a href="#">Read More</a>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./imgs/cat-07.jpg" alt="">
+                    <h4>Test Title</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                    <div class="link">
+                        <a href="#">Read More</a>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./imgs/cat-08.jpg" alt="">
+                    <h4>Test Title</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                    <div class="link">
+                        <a href="#">Read More</a>
+                        <i class="fas fa-long-arrow-alt-right"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Ariticles -->
 </body>
 </html>
