--- a/index.html
+++ b/index.html
@@ -148,5 +148,170 @@
         </div>
     </div>
     <!-- End Ariticles -->
+    <!-- Start Gallary -->
+    <div class="gallery">
+        <h2 class="special-title">gallery</h2>
+        <div class="container">
+            <div class="box">
+                <div class="image">
+                    <img src="./imgs/gallery-01.png" alt="photo">
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="./imgs/gallery-02.png" alt="photo">
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="./imgs/gallery-03.jpg" alt="photo">
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="./imgs/gallery-04.png" alt="photo">
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="./imgs/gallery-05.jpg" alt="photo">
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="./imgs/gallery-06.png" alt="photo">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Gallary -->
+    <!-- Start Features -->
+    <div class="features" id="features">
+        <h2 class="special-title">Features</h2>
+        <div class="container">
+            <div class="box">
+                <div class="image"><img src="./imgs/features-01.jpg" alt=""></div>
+                <div class="content">
+                    <h4>Quality</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                </div>
+                <a href="#" class="quality">More</a>
+            </div>
+            <div class="box">
+                <div class="image"><img src="./imgs/features-02.jpg" alt=""></div>
+                <div class="content">
+                    <h4>Time</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                </div>
+                <a href="#" class="time">More</a>
+            </div>
+            <div class="box">
+                <div class="image"><img src="./imgs/features-03.jpg" alt=""></div>
+                <div class="content">
+                    <h4>Passion</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                </div>
+                <a href="#" class="passion">More</a>
+            </div>
+        </div>
+    </div>
+    <!-- End Features -->
+    <!-- Start Testimonials -->
+    <div class="testimonials">
+        <h2 class="special-title">testimonials</h2>
+        <div class="container">
+            <div class="box">
+                <div class="image">
+                    <img src="./imgs/avatar-01.png" alt="">
+                </div>
+                <h5>Abdulrahman Maktabi</h5>
+                <p>Full Stack Developer</p>
+                <ul class="stars">
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="./imgs/avatar-02.png" alt="">
+                </div>
+                <h5>Abdulrahman Maktabi</h5>
+                <p>Full Stack Developer</p>
+                <ul class="stars">
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="far fa-star"></i></li>
+                    <li><i class="far fa-star"></i></li>
+                    <li><i class="far fa-star"></i></li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="./imgs/avatar-03.png" alt="">
+                </div>
+                <h5>Abdulrahman Maktabi</h5>
+                <p>Full Stack Developer</p>
+                <ul class="stars">
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="far fa-star"></i></li>
+                    <li><i class="far fa-star"></i></li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="./imgs/avatar-04.png" alt="">
+                </div>
+                <h5>Abdulrahman Maktabi</h5>
+                <p>Full Stack Developer</p>
+                <ul class="stars">
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="far fa-star"></i></li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="./imgs/avatar-05.png" alt="">
+                </div>
+                <h5>Abdulrahman Maktabi</h5>
+                <p>Full Stack Developer</p>
+                <ul class="stars">
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="far fa-star"></i></li>
+                    <li><i class="far fa-star"></i></li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="./imgs/avatar-06.png" alt="">
+                </div>
+                <h5>Abdulrahman Maktabi</h5>
+                <p>Full Stack Developer</p>
+                <ul class="stars">
+                    <li><i class="fas fa-star"></i></li>
+                    <li><i class="far fa-star"></i></li>
+                    <li><i class="far fa-star"></i></li>
+                    <li><i class="far fa-star"></i></li>
+                    <li><i class="far fa-star"></i></li>
+                </ul>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+            </div>
+        </div>
+    </div>
+    <!-- End Testimonials -->
 </body>
 </html>
