--- a/index.html
+++ b/index.html
@@ -313,5 +313,132 @@
         </div>
     </div>
     <!-- End Testimonials -->
+    <!-- Start Team-members -->
+    <div class="team-members" id="team-members">
+        <h2 class="special-title">team members</h2>
+        <div class="container">
+            <div class="box">
+                <div class="content">
+                    <img src="./imgs/team-01.jpg" alt="photo">
+                    <div class="icons">
+                        <a href="https://www.facebook.com/abdulrahman.maktabi.3/" target="_blank" class="fa"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/cholalien__" target="_blank" class="tw"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/AbdulrahmanMaktabi/" target="_blank" class="gi"><i class="fab fa-github"></i></a>
+                        <a href="https://www.youtube.com/channel/UCVPRjuBKQZ7tvFcaaEeaGWQ" target="_blank" class="yo"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="text">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="content">
+                    <img src="./imgs/team-02.jpg" alt="photo">
+                    <div class="icons">
+                        <a href="https://www.facebook.com/abdulrahman.maktabi.3/" target="_blank" class="fa"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/cholalien__" target="_blank" class="tw"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/AbdulrahmanMaktabi/" target="_blank" class="gi"><i class="fab fa-github"></i></a>
+                        <a href="https://www.youtube.com/channel/UCVPRjuBKQZ7tvFcaaEeaGWQ" target="_blank" class="yo"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="text">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="content">
+                    <img src="./imgs/team-03.jpg" alt="photo">
+                    <div class="icons">
+                        <a href="https://www.facebook.com/abdulrahman.maktabi.3/" target="_blank" class="fa"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/cholalien__" target="_blank" class="tw"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/AbdulrahmanMaktabi/" target="_blank" class="gi"><i class="fab fa-github"></i></a>
+                        <a href="https://www.youtube.com/channel/UCVPRjuBKQZ7tvFcaaEeaGWQ" target="_blank" class="yo"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="text">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="content">
+                    <img src="./imgs/team-04.jpg" alt="photo">
+                    <div class="icons">
+                        <a href="https://www.facebook.com/abdulrahman.maktabi.3/" target="_blank" class="fa"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/cholalien__" target="_blank" class="tw"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/AbdulrahmanMaktabi/" target="_blank" class="gi"><i class="fab fa-github"></i></a>
+                        <a href="https://www.youtube.com/channel/UCVPRjuBKQZ7tvFcaaEeaGWQ" target="_blank" class="yo"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="text">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="content">
+                    <img src="./imgs/team-05.png" alt="photo">
+                    <div class="icons">
+                        <a href="https://www.facebook.com/abdulrahman.maktabi.3/" target="_blank" class="fa"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/cholalien__" target="_blank" class="tw"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/AbdulrahmanMaktabi/" target="_blank" class="gi"><i class="fab fa-github"></i></a>
+                        <a href="https://www.youtube.com/channel/UCVPRjuBKQZ7tvFcaaEeaGWQ" target="_blank" class="yo"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="text">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="content">
+                    <img src="./imgs/team-06.png" alt="photo">
+                    <div class="icons">
+                        <a href="https://www.facebook.com/abdulrahman.maktabi.3/" target="_blank" class="fa"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/cholalien__" target="_blank" class="tw"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/AbdulrahmanMaktabi/" target="_blank" class="gi"><i class="fab fa-github"></i></a>
+                        <a href="https://www.youtube.com/channel/UCVPRjuBKQZ7tvFcaaEeaGWQ" target="_blank" class="yo"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="text">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="content">
+                    <img src="./imgs/team-07.jpg" alt="photo">
+                    <div class="icons">
+                        <a href="https://www.facebook.com/abdulrahman.maktabi.3/" target="_blank" class="fa"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/cholalien__" target="_blank" class="tw"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/AbdulrahmanMaktabi/" target="_blank" class="gi"><i class="fab fa-github"></i></a>
+                        <a href="https://www.youtube.com/channel/UCVPRjuBKQZ7tvFcaaEeaGWQ" target="_blank" class="yo"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="text">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="content">
+                    <img src="./imgs/team-08.jpg" alt="photo">
+                    <div class="icons">
+                        <a href="https://www.facebook.com/abdulrahman.maktabi.3/" target="_blank" class="fa"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://twitter.com/cholalien__" target="_blank" class="tw"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/AbdulrahmanMaktabi/" target="_blank" class="gi"><i class="fab fa-github"></i></a>
+                        <a href="https://www.youtube.com/channel/UCVPRjuBKQZ7tvFcaaEeaGWQ" target="_blank" class="yo"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="text">
+                    <h3>Name</h3>
+                    <p>Simple Short Description</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Team-members -->
 </body>
 </html>
