--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     </div>
     <!-- End Testimonials -->
     <!-- Start Team-members -->
-    <div class="team-members" id="team-members">
+    <div class="team-members">
         <h2 class="special-title">team members</h2>
         <div class="container">
             <div class="box">
@@ -328,7 +328,7 @@
                     </div>
                 </div>
                 <div class="text">
-                    <h3>Name</h3>
+                    <h4>Name</h4>
                     <p>Simple Short Description</p>
                 </div>
             </div>
@@ -343,7 +343,7 @@
                     </div>
                 </div>
                 <div class="text">
-                    <h3>Name</h3>
+                    <h4>Name</h4>
                     <p>Simple Short Description</p>
                 </div>
             </div>
@@ -358,7 +358,7 @@
                     </div>
                 </div>
                 <div class="text">
-                    <h3>Name</h3>
+                    <h4>Name</h4>
                     <p>Simple Short Description</p>
                 </div>
             </div>
@@ -373,7 +373,7 @@
                     </div>
                 </div>
                 <div class="text">
-                    <h3>Name</h3>
+                    <h4>Name</h4>
                     <p>Simple Short Description</p>
                 </div>
             </div>
@@ -388,7 +388,7 @@
                     </div>
                 </div>
                 <div class="text">
-                    <h3>Name</h3>
+                    <h4>Name</h4>
                     <p>Simple Short Description</p>
                 </div>
             </div>
@@ -403,7 +403,7 @@
                     </div>
                 </div>
                 <div class="text">
-                    <h3>Name</h3>
+                    <h4>Name</h4>
                     <p>Simple Short Description</p>
                 </div>
             </div>
@@ -418,7 +418,7 @@
                     </div>
                 </div>
                 <div class="text">
-                    <h3>Name</h3>
+                    <h4>Name</h4>
                     <p>Simple Short Description</p>
                 </div>
             </div>
@@ -433,7 +433,7 @@
                     </div>
                 </div>
                 <div class="text">
-                    <h3>Name</h3>
+                    <h4>Name</h4>
                     <p>Simple Short Description</p>
                 </div>
             </div>
