--- a/index.html
+++ b/index.html
@@ -440,5 +440,88 @@
         </div>
     </div>
     <!-- End Team-members -->
+    <!-- Start Services -->
+    <div class="services">
+        <h2 class="special-title">services</h2>
+        <div class="container">
+            <div class="box">
+                <i class="fas fa-user-secret fa-5x"></i>
+                <h3>Security</h3>
+                <div class="link">
+                    <a href="#">Details</a>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fas fa-user-secret fa-5x"></i>
+                <h3>Security</h3>
+                <div class="link">
+                    <a href="#">Details</a>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fas fa-user-secret fa-5x"></i>
+                <h3>Security</h3>
+                <div class="link">
+                    <a href="#">Details</a>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fas fa-user-secret fa-5x"></i>
+                <h3>Security</h3>
+                <div class="link">
+                    <a href="#">Details</a>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fas fa-user-secret fa-5x"></i>
+                <h3>Security</h3>
+                <div class="link">
+                    <a href="#">Details</a>
+                </div>
+            </div>
+            <div class="box">
+                <i class="fas fa-user-secret fa-5x"></i>
+                <h3>Security</h3>
+                <div class="link">
+                    <a href="#">Details</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Services -->
+    <!-- Start Skills -->
+    <div class="our-skills">
+        <h2 class="special-title">our skills</h2>
+        <div class="container">
+            <img src="./imgs/skills.png" alt="photo">
+            <div class="skills">
+                <div class="skill">
+                    <h3>HTML<span>80%</span></h3>
+                    <div class="progres-holder">
+                        <span style="width:80%"></span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <h3>CSS<span>75%</span></h3>
+                    <div class="progres-holder">
+                        <span style="width:75%"></span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <h3>JS<span>90%</span></h3>
+                    <div class="progres-holder">
+                        <span style="width:90%"></span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <h3>PHP<span>90%</span></h3>
+                    <div class="progres-holder">
+                        <span style="width:90%"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Skills -->
 </body>
 </html>
