'Final-Commit-InshaAllah'

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="container">
             <a href="#" class="logo">cholalien</a>
             <ul class="main-nav">
-                <li><a href="#">articles</a></li>
-                <li><a href="#">gallery</a></li>
-                <li><a href="#">features</a></li>
+                <li><a href="#articles">articles</a></li>
+                <li><a href="#gallery">gallery</a></li>
+                <li><a href="#features">features</a></li>
                 <li>
                     <a href="#">other links</a>
                     <!-- Start Megamenu -->
@@ -33,18 +33,18 @@
                             <img src="./imgs/megamenu.png" alt="photo">
                         </div>
                         <ul class="links">
-                            <li><a href="#"><i class="fas fa-comments"></i> testimonials</a></li>
-                            <li><a href="#"><i class="fas fa-user-check"></i>team members</a></li>
-                            <li><a href="#"><i class="fab fa-servicestack"></i> services</a></li>
-                            <li><a href="#"><i class="far fa-check-circle"></i> our skills</a></li>
-                            <li><a href="#"><i class="fab fa-phoenix-framework"></i> how it works</a></li>
+                            <li><a href="#testimonials"><i class="fas fa-comments"></i> testimonials</a></li>
+                            <li><a href="#team-members"><i class="fas fa-user-check"></i>team members</a></li>
+                            <li><a href="#services"><i class="fab fa-servicestack"></i> services</a></li>
+                            <li><a href="#our-skills"><i class="far fa-check-circle"></i> our skills</a></li>
+                            <li><a href="#works"><i class="fab fa-phoenix-framework"></i> how it works</a></li>
                         </ul>
                         <ul class="links">
-                            <li><a href="#"><i class="far fa-calendar"></i> events</a></li>
-                            <li><a href="#"><i class="fas fa-tags"></i> pricing plans</a></li>
-                            <li><a href="#"><i class="fas fa-video"></i> top vides</a></li>
-                            <li><a href="#"><i class="fas fa-signal"></i> stats</a></li>
-                            <li><a href="#"><i class="fas fa-percent"></i> request a discount</a></li>
+                            <li><a href="#events"><i class="far fa-calendar"></i> events</a></li>
+                            <li><a href="#plans"><i class="fas fa-tags"></i> pricing plans</a></li>
+                            <li><a href="#videos"><i class="fas fa-video"></i> top videos</a></li>
+                            <li><a href="#stat"><i class="fas fa-signal"></i> stats</a></li>
+                            <li><a href="#discount"><i class="fas fa-percent"></i> request a discount</a></li>
                         </ul>
                     </div>
                     <!-- End Megamenu -->
@@ -149,7 +149,7 @@
     </div>
     <!-- End Ariticles -->
     <!-- Start Gallary -->
-    <div class="gallery">
+    <div class="gallery" id="gallery">
         <h2 class="special-title">gallery</h2>
         <div class="container">
             <div class="box">
@@ -217,7 +217,7 @@
     </div>
     <!-- End Features -->
     <!-- Start Testimonials -->
-    <div class="testimonials">
+    <div class="testimonials" id="testimonials">
         <h2 class="special-title">testimonials</h2>
         <div class="container">
             <div class="box">
@@ -314,7 +314,7 @@
     </div>
     <!-- End Testimonials -->
     <!-- Start Team-members -->
-    <div class="team-members">
+    <div class="team-members" id="team-members">
         <h2 class="special-title">team members</h2>
         <div class="container">
             <div class="box">
@@ -441,7 +441,7 @@
     </div>
     <!-- End Team-members -->
     <!-- Start Services -->
-    <div class="services">
+    <div class="services" id="services">
         <h2 class="special-title">services</h2>
         <div class="container">
             <div class="box">
@@ -490,7 +490,7 @@
     </div>
     <!-- End Services -->
     <!-- Start Skills -->
-    <div class="our-skills">
+    <div class="our-skills" id="our-skills">
         <h2 class="special-title">our skills</h2>
         <div class="container">
             <img src="./imgs/skills.png" alt="photo">
@@ -523,5 +523,282 @@
         </div>
     </div>
     <!-- End Skills -->
+    <!-- Start How-It-Wroks -->
+    <div class="works" id="works">
+        <h2 class="special-title">how it works?</h2>
+        <div class="container">
+            <img src="./imgs/work-steps.png" alt="photo">
+            <div class="content">
+                <div class="box">
+                    <img src="./imgs/work-steps-1.png" alt="photo">
+                    <div class="text">
+                        <h2>Business Analysis</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./imgs/work-steps-2.png" alt="photo">
+                    <div class="text">
+                        <h2>Business Analysis</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <img src="./imgs/work-steps-3.png" alt="photo">
+                    <div class="text">
+                        <h2>Business Analysis</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End How-It-Wroks -->
+    <!-- Start Events -->
+    <div class="events" id="events">
+        <h2 class="special-title">latest events</h2>
+        <div class="container">
+            <div class="dots dots-up">
+                <img src="./imgs/dots.png" alt="">
+            </div>
+            <div class="dots dots-down">
+                <img src="./imgs/dots.png" alt="">
+            </div>
+            <div class="head">
+                <img src="./imgs/events.png" alt="">
+                <div class="content">
+                    <div class="timer">
+                        <div class="box">
+                            <h4>35</h4>
+                            <p>Days</p>
+                        </div>
+                        <div class="box">
+                            <h4>01</h4>
+                            <p>Hours</p>
+                        </div>
+                        <div class="box">
+                            <h4>03</h4>
+                            <p>Minuts</p>
+                        </div>
+                        <div class="box" style="margin-right: 0 !important;">
+                            <h4>34</h4>
+                            <p>Seconds</p>
+                        </div>
+                    </div>
+                    <h2>Tech Masters Event 2021</h2>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et vero tenetur doloremque iusto ut adipisci quam ratione aliquam excepturi nulla in harum, veritatis porro</p>
+                </div>
+            </div>
+            <div class="form">
+                <form action="">
+                    <input type="email" name="u_email" id="" placeholder="Enter Your Email">
+                    <input type="submit" value="Subscribe">
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- End Events -->
+    <!-- Start PRICING PLANS -->
+    <div class="plans" id="plans">
+        <h2 class="special-title">PRICING PLANS</h2>
+        <div class="dots-up">
+            <img src="./imgs/dots.png" alt="">
+        </div>
+        <div class="dots-down">
+            <img src="./imgs/dots.png" alt="">
+        </div>
+        <div class="container">
+            <div class="box">
+                <div class="head">
+                    <h2>Basic</h2>
+                    <i class="fas fa-server fa-5x"></i>
+                    <span>15</span>
+                    <p>Per Mounth</p>
+                </div>
+                <ul class="body">
+                    <li>10GB HDD Space</li>
+                    <li>5 Email Address</li>
+                    <li>2 Subdomains</li>
+                    <li>4 Databases</li>
+                    <li>Basic Support</li>
+                </ul>
+                <a href="#">Chose Plan</a>
+            </div>
+            <div class="box">
+                <div class="head">
+                    <div class="label">most popular</div>
+                    <h2>Advance</h2>
+                    <i class="fas fa-server fa-5x"></i>
+                    <span>35</span>
+                    <p>Per Mounth</p>
+                </div>
+                <ul class="body">
+                    <li>25GB HDD Space</li>
+                    <li>10 Email Address</li>
+                    <li>4 Subdomains</li>
+                    <li>5 Databases</li>
+                    <li>Basic Support</li>
+                </ul>
+                <a href="#">Chose Plan</a>
+            </div>
+            <div class="box">
+                <div class="head">
+                    <h2>Basic</h2>
+                    <i class="fas fa-server fa-5x"></i>
+                    <span>55</span>
+                    <p>Per Mounth</p>
+                </div>
+                <ul class="body">
+                    <li>50GB HDD Space</li>
+                    <li>15 Email Address</li>
+                    <li>10 Subdomains</li>
+                    <li>9 Databases</li>
+                    <li>Basic Support</li>
+                </ul>
+                <a href="#">Chose Plan</a>
+            </div>
+        </div>
+    </div>
+    <!-- End PRICING PLANS -->
+    <!-- Start videos -->
+    <div class="videos" id="videos">
+        <h2 class="special-title">top videos</h2>
+        <div class="container">
+            <div class="holder">
+                <ul class="list">
+                    <li class="header">
+                        Top Viedos
+                        <i class="fas fa-random"></i>
+                    </li>
+                    <li>
+                        how to create sub domain
+                        <span>05:18</span>
+                    </li>
+                    <li>
+                        how to play with DNS
+                        <span>13:09</span>
+                    </li>
+                    <li>
+                        how to play with DNS
+                        <span>13:09</span>
+                    </li>
+                    <li>
+                        how to play with DNS
+                        <span>13:09</span>
+                    </li>
+                    <li>
+                        how to play with DNS
+                        <span>13:09</span>
+                    </li>
+                    <li>
+                        how to play with DNS
+                        <span>13:09</span>
+                    </li>
+                    <li>
+                        how to play with DNS
+                        <span>13:09</span>
+                    </li>
+                </ul>
+                <div class="content">
+                    <img src="./imgs/video-preview.jpg" alt="photo">
+                    <p>Everything About The Virtual Hosts</p>
+                </div>
+            </div>                
+        </div>
+    </div>
+    <!-- Start videos -->
+    <!-- Start Stat -->
+    <div class="stat" id="stat">
+        <h2 class="special-title">our awesome stat</h2>
+        <div class="container">
+            <div class="box">
+                <i class="fas fa-user-check fa-2x"></i>
+                <h2>150</h2>
+                <p>clients</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-code fa-2x"></i>
+                <h2>240</h2>
+                <p>projects</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-globe-americas fa-2x"></i>
+                <h2>50</h2>
+                <p>Countries</p>
+            </div>
+            <div class="box">
+                <i class="far fa-money-bill-alt fa-2x"></i>
+                <h2>500</h2>
+                <p>money</p>
+            </div>
+        </div>
+    </div>
+    <!-- End Stat -->
+    <!-- Start Discount -->
+    <div class="discount" id="discount">
+        <div class="image">
+            <h1>We Have A Discount</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi asperiores consectetur, recusandae ratione provident necessitatibus, cumque delectus commodi fuga praesentium beatae. Totam vel similique laborum dicta aperiam odit doloribus corporis.</p>
+            <img src="./imgs/discount.png" alt="photo">
+        </div>
+        <div class="form">
+            <h1>Request A Discount</h1>
+            <form action="" method="get">
+                <input type="text" name="" id="" placeholder="Your Name">
+                <input type="email" name="" id="" placeholder="Your Email">
+                <input type="text" name="" id="" placeholder="Your Phone">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Tell Us About Your Needs"></textarea>
+                <input type="submit" value="Send">
+            </form>
+        </div>
+    </div>
+    <!-- End Discount -->
+    <!-- Start Footer -->
+    <footer>
+        <div class="container">
+            <div class="box first">
+                <h1>cholalien</h1>
+                <div class="social">
+                    <a href="https://www.facebook.com/abdulrahman.maktabi.3/" target="_blank"><i class="fab fa-facebook-f fa"></i></a>
+                    <a href="https://github.com/AbdulrahmanMaktabi/" target="_blank"><i class="fab fa-github gi"></i></a>
+                    <a href="https://twitter.com/cholalien__" target="_blank"><i class="fab fa-twitter tw"></i></a>
+                </div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus nulla rem, dignissimos iste aspernatur</p>
+            </div>
+            <div class="box seconde">
+                <ul>
+                    <li><a href="#">Importent Link </a></li>
+                    <li><a href="#">Importent Link </a></li>
+                    <li><a href="#">Importent Link </a></li>
+                    <li><a href="#">Importent Link </a></li>
+                    <li><a href="#">Importent Link </a></li>
+                </ul>
+            </div>
+            <div class="box three">
+                <div class="contetn">
+                    <i class="fas fa-map-marker"></i>
+                    Turkey , Istanbul , Inside The Sphinx, Room Number 155
+                </div>
+                <div class="contetn">
+                    <i class="fas fa-clock"></i>
+                    Business Hours: From 10:00 To 18:00
+                </div>
+                <div class="contetn">
+                    <i class="fas fa-phone-volume"></i>
+                    +123-456-798<br>+987-654-321
+                </div>
+            </div>
+            <div class="box four">
+                <img src="./imgs/gallery-01.png" alt="photo">
+                <img src="./imgs/gallery-02.png" alt="photo">
+                <img src="./imgs/gallery-03.jpg" alt="photo">
+                <img src="./imgs/gallery-04.png" alt="photo">
+                <img src="./imgs/gallery-05.jpg" alt="photo">
+                <img src="./imgs/gallery-06.png" alt="photo">
+            </div>
+        </div>
+        <p class="end">Made With &lt;3 By Abdulrahman</p>
+    </footer>
+    <!-- End Footer -->
 </body>
 </html>
