--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@
             </div>
         </div>
     </div>
+    <div class="spikes"></div>
     <!-- End Testimonials -->
     <!-- Start Team-members -->
     <div class="team-members" id="team-members">
@@ -488,6 +489,7 @@
             </div>
         </div>
     </div>
+    <div class="spikes"></div>
     <!-- End Services -->
     <!-- Start Skills -->
     <div class="our-skills" id="our-skills">
